Fixed the __forget__ behaviour

--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -228,6 +228,7 @@ account_accountant:
 account_analytic_analysis:
     account_analytic_analysis.*:
     account_analytic_account.*:
+    account_analytic_account.contact_id: __forget__
     account_analytic_account.id:
         accound_analytic_account.id:
         account_analytic_account.fix_price_invoices:    #new: boolean
