--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -93,8 +93,8 @@ base:
         res_partner.is_company: return False
         res_partner.use_parent_address: return True # make a function which finds the value in the target database
     res_partner_address.name:
-        res_partner.name: return source_row['name'] or source_row['street'] or source_row['city'] or 'noname'
-        res_partner.display_name: return source_row['name'] or source_row['street'] or source_row['city'] or 'noname'
+        res_partner.name: return source_row['name'] or source_row['street'] or source_row['city'] or ('address' + str(source_row['id']))
+        res_partner.display_name: return source_row['name'] or source_row['street'] or source_row['city'] or ('address' + str(source_row['id']))
     res_partner_address.partner_id:
         res_partner.parent_id:
 
@@ -385,9 +385,11 @@ sale:
 stock:
     stock_move.*:
     stock_move.sale_line_id: __forget__  # FIXME __defer__
+    stock_move.partner_id: __forget__
     stock_move.address_id:
         stock_move.partner_id: __fk__ res_partner_address
     stock_picking.*:
+    stock_picking.partner_id: __forget__
     stock_picking.address_id:
         stock_picking.partner_id: __fk__ res_partner_address
     stock_inventory.*:
