--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -482,7 +482,8 @@ ecox:  # FIXME move outside + option to load
     fiche_vae.console_number: __forget__
     res_users.term_id: __forget__  # specific
     res_partner.allow_refund: __forget__  # specific
-    res_partner.producer: __forget__  # specific
+    res_partner.producer:
+        res_partner.manufacturer:
     account_bank_statement.term_id: __forget__  # specific
     pos_order.command_number: __forget__  # specific
     pos_order.draft_number: __forget__  # specific
